Fix overflow bug in boksok caused by generic wp-post-imagestyling

--- a/wp-content/themes/lsb-base-theme/assets/less/layouts/_posts.less
+++ b/wp-content/themes/lsb-base-theme/assets/less/layouts/_posts.less
@@ -4,11 +4,12 @@
     .lsb-meta;
   }
   
-  .wp-post-image {
-    margin: 0 0 @line-height-computed;
-    max-width: 500px;
+  &.post {
+    .wp-post-image {
+      margin: 0 0 @line-height-computed;
+      max-width: 500px;
+    }
   }
-
 }
 
 .loop article {
